--- a/control
+++ b/control
@@ -1,10 +1,12 @@
 Package: com.yaypixxo.cnon
 Name: CustomNoOlderNotifications
 Depends: mobilesubstrate, preferenceloader
-Version: 2.0.0
+Version: 2.1.0
 Architecture: iphoneos-arm
 Description: Change the "No Older Notifications" text to a custom one!
-Depiction: http://yaypixxo.com/depiction?p=com.yaypixxo.cnon
+Icon: https://yaypixxo.com/assets/com.yaypixxo.cnon.png
+Depiction: https://yaypixxo.com/depictions?p=com.yaypixxo.cnon
+SileoDepiction: https://yaypixxo.com/sileo/com.yaypixxo.com
 Maintainer: YaYPIXXO <viggo@lekdorf.com>
 Author: YaYPIXXO <viggo@lekdorf.com>
 Section: Tweaks
