add iOS 13 support

--- a/cnonprefs/Resources/Root.plist
+++ b/cnonprefs/Resources/Root.plist
@@ -44,7 +44,7 @@
 			<key>action</key>
 			<string>apply</string>
 			<key>label</key>
-			<string>Apply</string>
+			<string>Respring</string>
 		</dict>
 		<dict>
 			<key>cell</key>
