--- a/cnonprefs/Makefile
+++ b/cnonprefs/Makefile
@@ -4,10 +4,12 @@ TARGET = iphone:clang:11.2:11.2
 include $(THEOS)/makefiles/common.mk
 
 BUNDLE_NAME = cnonprefs
+
 cnonprefs_FILES = CNONRootListController.m
 cnonprefs_INSTALL_PATH = /Library/PreferenceBundles
 cnonprefs_FRAMEWORKS = UIKit
 cnonprefs_PRIVATE_FRAMEWORKS = Preferences
+cnonprefs_CFLAGS = -fobjc-arc
 
 include $(THEOS_MAKE_PATH)/bundle.mk
 
